Jacoco integrated in project